Java version related changes